--- a/common-style/style.css
+++ b/common-style/style.css
@@ -622,7 +622,7 @@ body.dark-theme .line-section {
 .container-contacts-info {
   height: 285px;
   display: flex;
-  gap: 183px;
+  gap: 428px;
 }
 .contacts-info {
   gap: 23px;
